Change image name

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <table>
           <tr>
             <td style="width: 5px; height: 25px"></td>
-            <td><img alt=" " src="images/home_1_2.png"  style="width: 37px; height: 25px"></td>
+            <td><img alt=" " src="images/cloud.png"  style="width: 37px; height: 25px"></td>
             <td style="width: 518px; height: 25px;"></td>
-            <td><img alt=" " src="images/home_1_10.png"  style="width: 26px; height: 25px"></td>
-            <td><img alt=" " src="images/home_1_11.png"  style="width: 27px; height: 25px"></td>
-            <td><img alt=" " src="images/home_1_12.png"  style="width: 29px; height: 25px"></td>
+            <td><img alt=" " src="images/min.png"  style="width: 26px; height: 25px"></td>
+            <td><img alt=" " src="images/max.png"  style="width: 27px; height: 25px"></td>
+            <td><img alt=" " src="images/close.png"  style="width: 29px; height: 25px"></td>
             <td style="width: 5px; height: 25px;"></td>
           </tr>
         </table>
@@ -65,19 +65,19 @@
           <td style="width: 233px; height: 33px;"></td>
           <td>
             <a href="http://profile.antomate.run/">
-              <img alt=" " src="images/home_5_4.png"  style="width: 33px; height: 33px;">
+              <img alt=" " src="images/linkedin.png"  style="width: 33px; height: 33px;">
             </a>
           </td>
           <td style="width: 34px; height: 33px;"></td>
           <td>
             <a href="http://code.antomate.run/">
-              <img alt=" " src="images/home_5_6.png"  style="width: 33px; height: 33px;">
+              <img alt=" " src="images/github.png"  style="width: 33px; height: 33px;">
             </a>
           </td>
           <td style="width: 34px; height: 33px;"></td>
           <td>
             <a href="http://build.antomate.run/">
-              <img alt=" " src="images/home_5_8.png"  style="width: 47px; height: 33px;">
+              <img alt=" " src="images/vsts.png"  style="width: 47px; height: 33px;">
             </a>
           </td>
           <td style="width: 233px; height: 33px;"></td>
