--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                   tty.printHTML('LinkedIN&emsp;&emsp;&emsp;&emsp;<a href="http://profile.antomate.run/">profile.antomate.run</a><br>');
                   tty.printHTML('GitHub&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<a href="http://code.antomate.run/">code.antomate.run</a><br>');
                   tty.printHTML('DockerHub&emsp;&emsp;&emsp;<a href="http://build.antomate.run/">build.antomate.run</a><br>');
+                  tty.printHTML('VSTS&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<a href="http://devops.antomate.run/">devops.antomate.run</a><br>');
                   tty.printText('> ','font-weight:bold;color:#8ae237');
                 </script>
             </div>
@@ -62,7 +63,7 @@
       <div style="width: 647px; height: 20px;"></div>
       <table cellpadding="0" border="0" cellspacing="0">
         <tr>
-          <td style="width: 233px; height: 33px;"></td>
+          <td style="width: 200px; height: 33px;"></td>
           <td>
             <a href="http://profile.antomate.run/">
               <img alt=" " src="images/linkedin.png"  style="width: 33px; height: 33px;">
@@ -74,13 +75,19 @@
               <img alt=" " src="images/github.png"  style="width: 33px; height: 33px;">
             </a>
           </td>
-          <td style="width: 34px; height: 33px;"></td>
+          <td style="width: 33px; height: 33px;"></td>
           <td>
             <a href="http://build.antomate.run/">
-              <img alt=" " src="images/vsts.png"  style="width: 47px; height: 33px;">
+              <img alt=" " src="images/docker.png"  style="width: 47px; height: 33px;">
             </a>
           </td>
-          <td style="width: 233px; height: 33px;"></td>
+          <td style="width: 34px; height: 33px;"></td>
+          <td>
+            <a href="http://devops.antomate.run/">
+              <img alt=" " src="images/vsts.png"  style="width: 33px; height: 33px;">
+            </a>
+          </td>
+          <td style="width: 200px; height: 33px;"></td>
         </tr>
       </table>
     </div>
